--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'de.pqtriick'
-version = '2.0'
+version = '2.0.1'
 
 repositories {
     mavenCentral()
@@ -40,7 +40,7 @@ dependencies {
     compileOnly('net.citizensnpcs:citizens-main:2.0.33-SNAPSHOT') {
         exclude group: '*', module: '*'
     }
-    shadow 'net.labymod.serverapi:server-bukkit:1.0.1'
+    shadow "net.labymod.serverapi:server-bukkit:1.0.2"
 }
 
 def targetJavaVersion = 20
