--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'de.pqtriick'
-version = '2.0.1'
+version = '2.0.2'
 
 repositories {
     mavenCentral()
@@ -44,6 +44,7 @@ dependencies {
         exclude group: '*', module: '*'
     }
     shadow "net.labymod.serverapi:server-bukkit:1.0.2"
+    shadow "net.labymod.serverapi.integration:voicechat:1.0.1"
 }
 
 def targetJavaVersion = 20
