--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'de.pqtriick'
-version = '2.5'
+version = '2.6'
 
 repositories {
     mavenCentral()
@@ -40,8 +40,9 @@ dependencies {
     compileOnly('net.citizensnpcs:citizens-main:2.0.33-SNAPSHOT') {
         exclude group: '*', module: '*'
     }
-    shadow "net.labymod.serverapi:server-bukkit:1.0.2"
+    shadow "net.labymod.serverapi:server-bukkit:1.0.6"
     shadow "net.labymod.serverapi.integration:voicechat:1.0.1"
+    shadow "net.labymod.serverapi.integration:betterperspective:1.0.1"
 }
 
 def targetJavaVersion = 17
