Citizens is now optional! V. 2.6.1

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,5 @@ name: LabySK
 version: '${version}'
 main: de.pqtriick.labysk.LabySK
 api-version: '1.20'
-depend: [Skript, Citizens]
+depend: [Skript]
+softdepend: [Citizens]
